docs/api/qiskit/0.19/qiskit.aqua.components.uncertainty_models.LogNormalDistribution.mdx
---
title: LogNormalDistribution (v0.19)
description: API reference for qiskit.aqua.components.uncertainty_models.LogNormalDistribution in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.uncertainty_models.LogNormalDistribution
---

# LogNormalDistribution

<Class id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/uncertainty_models/log_normal_distribution.py" signature="LogNormalDistribution(num_target_qubits, mu=0, sigma=1, low=0, high=1)" modifiers="class">
  The Univariate Log-Normal Distribution.

  Log-normal distribution, truncated to lower and upper bound and discretized on a grid defined by the number of qubits.

  **Parameters**

  *   **num\_target\_qubits** (`int`) – Number of qubits it acts on, has a minimum value of 1.
  *   **mu** (`float`) – Expected value of considered normal distribution
  *   **sigma** (`float`) – Standard deviation of considered normal distribution
  *   **low** (`float`) – Lower bound, i.e., the value corresponding to |0…0> (assuming an equidistant grid)
  *   **high** (`float`) – Upper bound, i.e., the value corresponding to |1…1> (assuming an equidistant grid)

  ## Attributes

  <span id="lognormaldistribution-high" />

  ### high

  <Attribute id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.high">
    returns high
  </Attribute>

  <span id="lognormaldistribution-low" />

  ### low

  <Attribute id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.low">
    returns low
  </Attribute>

  <span id="lognormaldistribution-num-target-qubits" />

  ### num\_target\_qubits

  <Attribute id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.num_target_qubits">
    Returns the number of target qubits
  </Attribute>

  <span id="lognormaldistribution-num-values" />

  ### num\_values

  <Attribute id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.num_values">
    returns number of values
  </Attribute>

  <span id="lognormaldistribution-probabilities" />

  ### probabilities

  <Attribute id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.probabilities">
    returns probabilities
  </Attribute>

  <span id="lognormaldistribution-values" />

  ### values

  <Attribute id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.values">
    returns values
  </Attribute>

  ## Methods

  <span id="lognormaldistribution-build" />

  ### build

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.build" signature="LogNormalDistribution.build(qc, q, q_ancillas=None, params=None)" />

  <span id="lognormaldistribution-build-controlled" />

  ### build\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.build_controlled" signature="LogNormalDistribution.build_controlled(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds corresponding controlled sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="lognormaldistribution-build-controlled-inverse" />

  ### build\_controlled\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.build_controlled_inverse" signature="LogNormalDistribution.build_controlled_inverse(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds controlled inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="lognormaldistribution-build-controlled-inverse-power" />

  ### build\_controlled\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.build_controlled_inverse_power" signature="LogNormalDistribution.build_controlled_inverse_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled, inverse, power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="lognormaldistribution-build-controlled-power" />

  ### build\_controlled\_power

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.build_controlled_power" signature="LogNormalDistribution.build_controlled_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="lognormaldistribution-build-inverse" />

  ### build\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.build_inverse" signature="LogNormalDistribution.build_inverse(qc, q, q_ancillas=None)">
    Adds inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
  </Function>

  <span id="lognormaldistribution-build-inverse-power" />

  ### build\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.build_inverse_power" signature="LogNormalDistribution.build_inverse_power(qc, q, power, q_ancillas=None)">
    Adds inverse power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="lognormaldistribution-build-power" />

  ### build\_power

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.build_power" signature="LogNormalDistribution.build_power(qc, q, power, q_ancillas=None)">
    Adds power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="lognormaldistribution-get-num-qubits" />

  ### get\_num\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.get_num_qubits" signature="LogNormalDistribution.get_num_qubits()">
    returns number of qubits
  </Function>

  <span id="lognormaldistribution-get-num-qubits-controlled" />

  ### get\_num\_qubits\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.get_num_qubits_controlled" signature="LogNormalDistribution.get_num_qubits_controlled()">
    returns number of qubits controlled
  </Function>

  <span id="lognormaldistribution-pdf-to-probabilities" />

  ### pdf\_to\_probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.pdf_to_probabilities" signature="LogNormalDistribution.pdf_to_probabilities(pdf, low, high, num_values)" modifiers="static">
    Takes a probability density function (pdf), and returns a truncated and discretized array of probabilities corresponding to it

    **Parameters**

    *   **pdf** (*function*) – probability density function
    *   **low** (*float*) – lower bound of equidistant grid
    *   **high** (*float*) – upper bound of equidistant grid
    *   **num\_values** (*int*) – number of grid points

    **Returns**

    array of probabilities

    **Return type**

    list
  </Function>

  <span id="lognormaldistribution-required-ancillas" />

  ### required\_ancillas

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.required_ancillas" signature="LogNormalDistribution.required_ancillas()">
    returns required ancillas
  </Function>

  <span id="lognormaldistribution-required-ancillas-controlled" />

  ### required\_ancillas\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.LogNormalDistribution.required_ancillas_controlled" signature="LogNormalDistribution.required_ancillas_controlled()">
    returns required ancillas controlled
  </Function>
</Class>

